--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/imteching/Backend_Entrega1_VargasMesa#readme",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-handlebars": "^8.0.3",
+    "socket.io": "^4.8.1"
   }
 }
